--- a/Students.DB_Lib/Students.DB_Lib.csproj
+++ b/Students.DB_Lib/Students.DB_Lib.csproj
@@ -24,6 +24,12 @@
     <ItemGroup>
       <ProjectReference Include="..\Students.Model\Students.Model.csproj" />
     </ItemGroup>
+
+    <ItemGroup>
+      <None Update="db_config.json">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
     
     
 </Project>
