--- a/Students.App/Students.App.csproj
+++ b/Students.App/Students.App.csproj
@@ -6,4 +6,15 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Compile Update="Authorization\Authorization.xaml.cs">
+        <DependentUpon>Authorization.xaml</DependentUpon>
+      </Compile>
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Students.DB_Lib\Students.DB_Lib.csproj" />
+      <ProjectReference Include="..\Students.Model\Students.Model.csproj" />
+    </ItemGroup>
+
 </Project>
